k8s-manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      labels:
        app: home
    spec:
      containers:
       - name: home-app-pod
         image: kind-ambsdr-home:0.1
         ports:
         - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: others-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: others
  template:
    metadata:
      labels:
        app: others
    spec:
      containers:
       - name: others-app-pod
         image: kind-ambsdr-others:0.1
         ports:
         - containerPort: 80
